Some Auto-Snap options in animation editors don't work correctly #87173

Closed
opened 2021-04-03 19:42:56 +02:00 by Matthew Hinson · 10 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.35.02 27.20.1034.6

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: 2.79 (at least the snapping related issues)
This broke with de9ea94fc6

Short description of error
Some Auto-Snap options in the animation-related editors (Dope Sheet, Graph Editor, Drivers, NLA) don't work as expected.

Exact steps for others to reproduce the error

  • Load the default startup scene
  • Add two keyframes on the cube's Location X property, e.g. one on frame 1 and one on frame 50.
  • Add two markers, e.g. one on frame 20 and one on frame 40.
  • Go through the various editors, switch between the Auto-Snap options, and move the keyframes around.

The following unexpected behavior is observed:

Dope Sheet

  • Frame Step works just like Nearest Frame. If you start from a keyframe that sits between frames 1 and 2 (frame 1.5 so to speak) and move it to the right, it doesn't jump to frame 2.5, then 3.5, 4.5... as you'd expect - instead, it first gets rounded to frame 2, and then jumps to frames 3 and 4 from there.
  • Similarly, Second Step works just like Nearest Second. If you start from a keyframe at frame 10 and move it to the right, it doesn't jump to 10+24 = 34, but first gets rounded to 24 and then jumps to 48 (assuming a 24fps scene).

Graph Editor

  • Frame Step: same behavior as in the Dope Sheet.
  • Second Step: very strange behavior. The keyframe itself moves along as though no snapping were active at all, while its handles "stay behind" until it reaches the next second boundary, at which point the handles teleport to "catch up."

Drivers
Arguably, the Drivers editor shouldn't have an Auto-Snap dropdown at all, or at least not one that refers to frames and seconds. After all, its X axis is (usually) not a time axis.

(In fact, the Drivers editor has a bunch of menu items that don't seem to belong there: "View -> Set Preview Range", "Key -> Snap -> Selection to Nearest Frame/Second/Marker" and others)

NLA

  • Frame Step: same behavior as in the Dope Sheet.
  • Second Step: same behavior as in the Dope Sheet.
  • Nearest Marker: interestingly, moving an action with this snapping option enabled changes the action's length. If you drag it between two markers, it'll be stretched so it starts at one marker and ends at the other. If you drag it past the first or last marker, its length becomes a tenth of a frame.

As a final note: in #83710, the usefulness of some of these Auto-Snap options was called into question.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.35.02 27.20.1034.6 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: 2.79 (at least the snapping related issues) This broke with de9ea94fc6 **Short description of error** Some Auto-Snap options in the animation-related editors (Dope Sheet, Graph Editor, Drivers, NLA) don't work as expected. **Exact steps for others to reproduce the error** - Load the default startup scene - Add two keyframes on the cube's Location X property, e.g. one on frame 1 and one on frame 50. - Add two markers, e.g. one on frame 20 and one on frame 40. - Go through the various editors, switch between the Auto-Snap options, and move the keyframes around. The following unexpected behavior is observed: **Dope Sheet** - Frame Step works just like Nearest Frame. If you start from a keyframe that sits between frames 1 and 2 (frame 1.5 so to speak) and move it to the right, it doesn't jump to frame 2.5, then 3.5, 4.5... as you'd expect - instead, it first gets rounded to frame 2, and then jumps to frames 3 and 4 from there. - Similarly, Second Step works just like Nearest Second. If you start from a keyframe at frame 10 and move it to the right, it doesn't jump to 10+24 = 34, but first gets rounded to 24 and then jumps to 48 (assuming a 24fps scene). **Graph Editor** - Frame Step: same behavior as in the Dope Sheet. - Second Step: very strange behavior. The keyframe itself moves along as though no snapping were active at all, while its handles "stay behind" until it reaches the next second boundary, at which point the handles teleport to "catch up." **Drivers** Arguably, the Drivers editor shouldn't have an Auto-Snap dropdown at all, or at least not one that refers to frames and seconds. After all, its X axis is (usually) not a time axis. (In fact, the Drivers editor has a bunch of menu items that don't seem to belong there: "View -> Set Preview Range", "Key -> Snap -> Selection to Nearest Frame/Second/Marker" and others) **NLA** - Frame Step: same behavior as in the Dope Sheet. - Second Step: same behavior as in the Dope Sheet. - Nearest Marker: interestingly, moving an action with this snapping option enabled changes the action's length. If you drag it between two markers, it'll be stretched so it starts at one marker and ends at the other. If you drag it past the first or last marker, its length becomes a tenth of a frame. As a final note: in #83710, the usefulness of some of these Auto-Snap options was called into question.
Author
Member

Added subscriber: @Matthew-Hinson

Added subscriber: @Matthew-Hinson
Author
Member

The Ctrl button, which is supposed to toggle snapping on the fly, also behaves inconsistently.

Dope Sheet: works as expected. If you hold Ctrl while auto-snapping is on (e.g. Nearest Frame), it disables snapping, and when auto-snapping is off, it enables it (Nearest Frame).
Graph Editor: holding Ctrl while auto-snapping is on doesn't disable it. In fact, depending on the zoom level, it may actually make the snapping coarser, skipping two frames at a time instead of one. The same coarser-than-intended snapping happens when holding Ctrl while auto-snapping is off.
NLA: holding Ctrl while auto-snapping is on doesn't disable it. However, holding Ctrl while auto-snapping is off does enable it.

The Ctrl button, which is supposed to toggle snapping on the fly, also behaves inconsistently. **Dope Sheet:** works as expected. If you hold Ctrl while auto-snapping is on (e.g. Nearest Frame), it disables snapping, and when auto-snapping is off, it enables it (Nearest Frame). **Graph Editor:** holding Ctrl while auto-snapping is on doesn't disable it. In fact, depending on the zoom level, it may actually make the snapping coarser, skipping two frames at a time instead of one. The same coarser-than-intended snapping happens when holding Ctrl while auto-snapping is off. **NLA**: holding Ctrl while auto-snapping is on doesn't disable it. However, holding Ctrl while auto-snapping is off does enable it.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-08-17 09:02:07 +02:00
Member

Can confirm (all of it).
Not sure if we need to split this up into separate reports along the way, will check.

Can confirm (all of it). Not sure if we need to split this up into separate reports along the way, will check.

This issue was referenced by 0246128b7f

This issue was referenced by 0246128b7f9c353641733f38dfafec362c3cf933
Philipp Oeser removed their assignment 2021-08-17 16:06:17 +02:00
Germano Cavalcante was assigned by Philipp Oeser 2021-08-17 16:06:17 +02:00
Member

Added subscribers: @wbmoss_dev, @dr.sybren

Added subscribers: @wbmoss_dev, @dr.sybren
Member

Nearest Marker: interestingly, moving an action with this snapping option enabled changes the action's length. If you drag it between two markers, it'll be stretched so it starts at one marker and ends at the other. If you drag it past the first or last marker, its length becomes a tenth of a frame.

In the NLA, this is actually true for all of the auto-snapping options (not just Nearest Marker).
This is the one thing that is still not solved with D12241: Fix #87173: wrong Auto-Snap in animation editors and I think at this point it would be good to report this separately (I assume this will involve some design decision, it has always taken into account the underlying keyframes [instead of only one strip border as one might expect] -- this might be interesting for @wbmoss_dev or @dr.sybren )

> Nearest Marker: interestingly, moving an action with this snapping option enabled changes the action's length. If you drag it between two markers, it'll be stretched so it starts at one marker and ends at the other. If you drag it past the first or last marker, its length becomes a tenth of a frame. In the NLA, this is actually true for all of the auto-snapping options (not just `Nearest Marker`). This is the one thing that is still not solved with [D12241: Fix #87173: wrong Auto-Snap in animation editors](https://archive.blender.org/developer/D12241) and I think at this point it would be good to report this separately (I assume this will involve some design decision, it has always taken into account the underlying keyframes [instead of only one strip border as one might expect] -- this might be interesting for @wbmoss_dev or @dr.sybren )

This issue was referenced by b0d9e6797f

This issue was referenced by b0d9e6797fb866e7a58876c7977c98a190070310

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87173
No description provided.